--- a/giglink/index.html
+++ b/giglink/index.html
@@ -188,7 +188,30 @@
             </section>
         </main>
         <footer id="footer" class="footer">
-            foooter
+            <div class="footer__container">
+                <div class="row">
+                    <div class="footer-col">
+                        <h4><a href="#"><img src="Images/footerlogo.svg" alt="Логотип"></a></h4>
+                        <ul>
+                            <li>
+                                <a href="#">
+
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="footer-col">
+                        <h4></h4>
+                        <ul>
+                            <li>
+                                <a href="#">
+
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
         </footer>
     </div>
 </body>
