--- a/giglink/index.html
+++ b/giglink/index.html
@@ -187,27 +187,88 @@
 
             </section>
         </main>
+
+                                                    <!-- Footer  -->
         <footer id="footer" class="footer">
             <div class="footer__container">
                 <div class="row">
                     <div class="footer-col">
                         <h4><a href="#"><img src="Images/footerlogo.svg" alt="Логотип"></a></h4>
-                        <ul>
-                            <li>
-                                <a href="#">
-
+                        <ul class="footer_menu">
+                            <li class="footer__list">
+                                <a class="footer__link" href="#">
+                                    Reklama
+                                </a>
+                            </li>
+                            <li class="footer__list">
+                                <a class="footer__link" href="#">
+                                    Loyiha haqida
+                                </a>
+                            </li>
+                            <li class="footer__list">
+                                <a class="footer__link" href="#">
+                                    Qoidalar
+                                </a>
+                            </li>
+                            <li class="footer__list">
+                                <a class="footer__link" href="#">
+                                    Biz bilan aloqa
                                 </a>
                             </li>
                         </ul>
+                        <div class="design">
+                            <h3>Design by <a href="#">Fido Studio</a></h3>
+                        </div>
                     </div>
                     <div class="footer-col">
-                        <h4></h4>
+                        <div class="short__news">
+                            <h4>
+                                <a class="footer__title" href="#">Texno Yangiliklar</a>
+                            </h4>
+                            <h4>
+                                <a class="footer__title" href="#">Avto Yangiliklar</a>
+                            </h4>
+                            <h4>
+                                <a class="footer__title" href="#">Sharhlar</a>
+                            </h4>
+                        </div>
                         <ul>
-                            <li>
-                                <a href="#">
-
-                                </a>
-                            </li>
+                            <h3>Biz ijtimoiy tarmoqlarda:</h3>
+                            <div class="social__list">
+                                <li>
+                                    <a href="#">
+                                        <img src="" alt="">
+                                        <div class="icon">
+                                            <img src="icon/facebook.svg" alt="">
+                                        </div>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <img src="" alt="">
+                                        <div class="icon">
+                                            <img src="icon/twitter.svg" alt="">
+                                        </div>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <img src="" alt="">
+                                        <div class="icon">
+                                            <img src="icon/instagram.svg" alt="">
+                                        </div>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <img src="" alt="">
+                                        <div class="icon">
+                                            <img src="icon/link.svg" alt="">
+                                        </div>
+                                    </a>
+                                </li>
+                            </div>
+                            
                         </ul>
                     </div>
                 </div>
