--- a/giglink/index.html
+++ b/giglink/index.html
@@ -268,7 +268,12 @@
                                     </a>
                                 </li>
                             </div>
-                            
+                            <div class="copyright">
+                                <p>
+                                    © Copyright 2022 Giglink Barcha huquqlar himoyalangan. O‘zbekiston Matbuot va axborot <br>
+                                    agentligi tomonidan 2013-yil 04-06-sonli ro‘yxatga olinganlik guvohnomasi № 0976
+                                </p>
+                            </div>
                         </ul>
                     </div>
                 </div>
