latest news end

--- a/giglink/index.html
+++ b/giglink/index.html
@@ -161,30 +161,131 @@
                     <div class="horizontal-line"></div>
                     <div class="latest-news-content">
                         <div class="latest_text">
-                            <p class="latest-paragraf">
+                            <a href="#" class="latest-paragraf">
                                 Qanday qilib mukammal portfolioni yaratish va <br>
                                 mijozlarni jalb qilish mumkin?
-                            </p>
+                            </a>
                             <div class="latest-tegs">
-                                <a href="#" class="marketing_tags market">
-                                    Marketing
-                                </a>
-                                <a href="#" style="color: #9B9B9C; padding-top:6px;" class="market">
-                                    #design
-                                </a>
-                                <a href="#" style="color: #9B9B9C; padding-top:6px;">
-                                    #branding
-                                </a>
+                                <div>
+                                    <a href="#" class="marketing_tags market">
+                                        Marketing
+                                    </a>
+                                    <a href="#" style="color: #9B9B9C; padding-top:6px;" class="market">
+                                        #design
+                                    </a>
+                                    <a href="#" style="color: #9B9B9C; padding-top:6px;">
+                                        #branding
+                                    </a>
+                                </div>
+                                <div class="time-post">
+                                    <p>4 daqiqa oldin</p>
+                                </div>
                             </div>
                         </div>
-                        <div>
+                        <div class="latest_images-container">
                             <a href="#">
                                 <img src="Images/content1.jpg" class="latest_images" alt="Картинки">
                             </a>
                         </div>
                     </div>
+                    <div class="horizontal-line"></div>
+                    <div class="latest-news-content">
+                        <div class="latest_text">
+                            <a href="#" class="latest-paragraf">
+                                IT kompaniyada amaliyotchi boʻlish qanday?
+                            </a>
+                            <div class="latest-tegs">
+                                <div>
+                                    <a href="#" class="marketing_tags market">
+                                        Dasturlash
+                                    </a>
+                                    <a href="#" style="color: #9B9B9C; padding-top:6px;" class="market">
+                                        #backend
+                                    </a>
+                                    <a href="#" style="color: #9B9B9C; padding-top:6px;">
+                                        #go
+                                    </a>
+                                </div>
+                                <div class="time-post">
+                                    <p>12 daqiqa oldin</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="latest_images-container">
+                            <a href="#">
+                                <img src="Images/content1.jpg" class="latest_images" alt="Картинки">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="horizontal-line"></div>
+                    <div class="latest-news-content">
+                        <div class="latest_text">
+                            <a href="#" class="latest-paragraf">
+                                Biznes menejment nima va bozorda biznes <br>
+                                menejerlarga boʻlgan talab qanday?
+                            </a>
+                            <div class="latest-tegs">
+                                <div>
+                                    <a href="#" class="marketing_tags market">
+                                        Management
+                                    </a>
+                                    <a href="#" style="color: #9B9B9C; padding-top:6px;" class="market">
+                                        #project
+                                    </a>
+                                    <a href="#" style="color: #9B9B9C; padding-top:6px;">
+                                        #product
+                                    </a>
+                                    <a href="#" style="color: #9B9B9C; padding-top:6px;">
+                                        #case
+                                    </a>
+                                </div>
+                                <div class="time-post">
+                                    <p>18 daqiqa oldin</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="latest_images-container">
+                            <a href="#">
+                                <img src="Images/content1.jpg" class="latest_images" alt="Картинки">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="horizontal-line"></div>
+                    <div class="latest-news-content">
+                        <div class="latest_text">
+                            <a href="#" class="latest-paragraf">
+                                UI/UX dizayn sohasini oʻrganish uchun bepul <br>
+                                va pullik kurslar
+                            </a>
+                            <div class="latest-tegs">
+                                <div>
+                                    <a href="#" class="marketing_tags market">
+                                        Marketing
+                                    </a>
+                                    <a href="#" style="color: #9B9B9C; padding-top:6px;" class="market">
+                                        #design
+                                    </a>
+                                    <a href="#" style="color: #9B9B9C; padding-top:6px;">
+                                        #branding
+                                    </a>
+                                </div>
+                                <div class="time-post">
+                                    <p>24 daqiqa oldin</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="latest_images-container">
+                            <a href="#">
+                                <img src="Images/content1.jpg" class="latest_images" alt="Картинки">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="all__button">
+                        <button >
+                            <a href="#">Ko'proq yangilik</a>
+                        </button>
+                    </div>
                 </div>
-
             </section>
         </main>
 
