Telegramga link bo'limini qo'shdim

--- a/giglink/index.html
+++ b/giglink/index.html
@@ -287,6 +287,19 @@
                     </div>
                 </div>
             </section>
+            <section class="telegram">
+                <div class="telegram-link__container">
+                    <div class="telegram-title">
+                        <p>
+                            Bizni Telegramda <br>
+                            kuzatib boring
+                        </p>
+                        <button>
+                            <a href="https://t.me/shomuratov_azamat" target="_blank">@giglink</a>
+                        </button>
+                    </div>
+                </div>
+            </section>
         </main>
 
                                                     <!-- Footer  -->
