--- a/giglink/index.html
+++ b/giglink/index.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@500;600;800&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style/responsive.css">
     <title>Texnologiya Yangiliklari</title>
 </head>
 <body>
@@ -15,6 +16,9 @@
     <div class="wrapper">
         <header id="header" class="header">
             <div class="header__container">
+                <button class="header__burger-btn">
+                    <span></span><span></span><span></span>
+                </button>
                 <a href="index.html" class="logo">
                     <img src="Images/Logo.svg" alt="Логотип">
                 </a>
